# WQ-System

./: README.md
MySystem/: config.ini
MySystem/inc/adapter/: CTPAdapter.h
MySystem/inc/server/: UdpClient.h
MySystem/lib/: libCustomCtpMd.so.1.2  libCustomCtpTrade.so.1.2  libCustomMd.so.1.2
MySystem/src/: CustomCtpMd.cpp  CustomMd.cpp  CustomTrade.cpp
Test/: CMakeLists.txt  config.ini  test  test.cpp
Test/inc/: CustomMd.h  CustomSemaphore.h  CustomTd.h  CustomTrade.h  CustomUser.h  test.h
Test/inc/adapter/: CTPAdapter.h  Constant.h  MdDataStruct.h
Test/inc/md/: CustomCtpMd.h
Test/inc/myapi/: CustomMd.h  CustomTrade.h
Test/inc/server/: UdpClient.h  UdpServer.h
Test/inc/td/: CustomCtpTrade.h
Test/inc/util/: CustomSemaphore.h  CustomUser.h  Iniline.h
Test/lib/: libCustomCtpMd.so.1  libCustomCtpMd.so.1.2  libCustomCtpTrade.so.1  libCustomCtpTrade.so.1.2  libCustomMd.so.1  libCustomMd.so.1.2  libCustomMdSpi.so.1  libCustomMdSpi.so.1.2  libCustomTrade.so.1  libCustomTrade.so.1.2  libCustomTradeSpi.so.1  libCustomTradeSpi.so.1.2  libStrategyTrade.so.1  libStrategyTrade.so.1.2  libTickToKlineHelper.so.1  libTickToKlineHelper.so.1.2
Test/src/: CMakeLists.txt  CustomCtpMd.cpp  CustomCtpTrade.cpp  CustomMd.cpp  CustomMdSpi.cpp  CustomTrade.cpp  CustomTradeSpi.cpp  TickToKlineHelper.cpp  main.cpp
Test/src/controlunit/: main.cpp
Test/src/mdserver/: main.cpp
Test/src/strategy/: main.cpp
Test/src/tradeserver/: main.cpp
linux64/: CMakeLists.txt
linux64/code/: spi.cpp  test  test.cpp
linux64/inc/: spi.hpp
linux64/lib/: libspi.so.1  libspi.so.1.2
linux64/src/: CMakeLists.txt  main.cpp  spi.cpp
tradeapidll/code/: test.cpp
windows/code/: spi.hpp
