SET(CLASS_FILE CustomCtpMd CustomMd CustomCtpTrade CustomTrade)
SET(MDSERVER mdserver)
SET(TRADESERVER tradeserver)
SET(STRATEGY strategy)
SET(MAIN_FILE main)
SET(CTP_SO thostmduserapi thosttraderapi)

# add c++11 and -g
set(CMAKE_CXX_FLAGS "-std=c++11 -g")

# compile .so and .a
FOREACH(f ${CLASS_FILE})
	ADD_LIBRARY(${f} SHARED ${f}.cpp)
	ADD_LIBRARY(${f}_static STATIC ${f}.cpp)
	SET_TARGET_PROPERTIES(${f} PROPERTIES VERSION 1.2 SOVERSION 1)
	SET_TARGET_PROPERTIES(${f}_static PROPERTIES OUTPUT_NAME "${f}")
	SET_TARGET_PROPERTIES(${f} PROPERTIES CLEAN_DIRECT_OUTPUT 1)
	SET_TARGET_PROPERTIES(${f}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
ENDFOREACH(f)

ADD_EXECUTABLE(${TRADESERVER} ${TRADESERVER}/${MAIN_FILE}.cpp)
TARGET_LINK_LIBRARIES(${TRADESERVER} ${CLASS_FILE} ${CTP_SO})

ADD_EXECUTABLE(${MDSERVER} ${MDSERVER}/${MAIN_FILE}.cpp)
TARGET_LINK_LIBRARIES(${MDSERVER} ${CLASS_FILE} ${CTP_SO})

ADD_EXECUTABLE(${STRATEGY} ${STRATEGY}/${MAIN_FILE}.cpp)
TARGET_LINK_LIBRARIES(${STRATEGY} ${CLASS_FILE} ${CTP_SO})